--- a/css/hngsix.css
+++ b/css/hngsix.css
@@ -8,29 +8,23 @@
         margin: 0;
         padding: 0;
         font-family: "Open Sans", segoe UI, sans-serif;
-        background-color: rgb(241, 235, 235);
         color: rgba(0, 0, 0, 0.8);
-    }
-  
-    /*Small screen - any screen size below 768px*/    
-    @media ( max-width: 768px ) {
-        .body-container{
-            background-color: white;
-            margin: 30px; 
-            
-        }
-    }
-
-    /*Medium  screen and upward*/ 
-    @media ( min-width: 768px ) {
-       .body-container{
-            background-color: white;
-            margin: 40px 60px;
-            }
     }
 
     main {
-        padding: 0 20px;
+        padding: 0;
+    }
+
+    .countdown1 {
+        font-family: Oswald;
+        font-style: normal;
+        font-weight: 500;
+        width: fit-content;
+        height: fit-content;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        margin-bottom: 3em;
     }
 
     a {
@@ -100,9 +94,7 @@
         z-index: 10;
         transform: rotate(-135deg);
     }
-    #countdown-section {
-        margin-top: 40px;
-    }
+    
     #countdown-container {
         width: 50vw;
         margin: 50px auto;
@@ -141,8 +133,8 @@
         width: 100%;
         font-size: 40px;
         font-weight: 600;
-        text-align: center;
         color: #084482;
+        margin-right: auto;
         margin-bottom: 50px;
     }
 
@@ -152,18 +144,21 @@
         text-align: left;
         width: 100%;
         margin: 0 auto;
+        margin-top: 8em;
     }
     #about-container article {
         font-size: 15px;
     }
-    #about-container img {
-        width: 100%;
-        height: 100%;
-    }
 
+    #about-container article img {
+        position: absolute !important;
+        width: 50vw;
+        right: 0!important;
+    }
         /*ABOUT PAGE ENDS */
         /*GALLERY STARTS HERE */
         .gallery {
+            margin-top: 15em;
            width: 100%;
            text-align: center;
 
@@ -251,13 +246,21 @@
         margin-bottom: 1rem;
         font-size: 16px;
     }
+
+    #main-mentor-section {
+        width: 100%;
+        background-color: rgb(245, 245, 245);
+    }
+
     #mentor-section {
         display: grid;
         grid-template-columns: 1fr;
         text-align: left;
+        width: 90%;
         background-color: rgb(245, 245, 245);
         margin: 50px auto;
     }
+    
     #mentor-section h2 {
         text-align: left;
         margin-bottom: 50px;
@@ -435,3 +438,41 @@
     }
 }
 
+@media screen and (max-width: 759px) {
+    #home-about h1 {
+        margin-top: 0;
+    }
+
+    #countdown-section {
+        margin-top: 3em;
+    }
+
+    .countdown1 {
+        font-family: Oswald;
+        font-style: normal;
+        font-weight: 500;
+        width: fit-content;
+        height: fit-content;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        margin-bottom: 3em;
+        zoom: 0.5 !important;
+    }
+
+    #about-container article p{
+        width: 90vw;
+        padding-bottom: 40px;
+    }
+
+    #about-container article img {
+        width: 100%;
+    }
+
+    .gallery {
+        margin-top: 600px ;
+       width: 100%;
+       text-align: center;
+
+    }
+}
