--- a/css/intern-experience.css
+++ b/css/intern-experience.css
@@ -7,34 +7,8 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
-body{
-  background-color: rgb(241, 235, 235);
-}
-
-
-/*Small screen - any screen size below 768px*/    
-@media ( max-width: 768px ) {
-  .body-container{
-      background-color: white;
-      margin: 30px; 
-      
-  }
-}
-
-/*Medium  screen and upward*/ 
-@media ( min-width: 768px ) {
- .body-container{
-      background-color: white;
-      margin: 40px 60px;
-      }
-}
-
 a {
   text-decoration: none;
-}
-
-header {
-  background-color: #d1f0f6;
 }
 
 .image {
@@ -149,7 +123,7 @@ i {
   background: rgb(98, 255, 98);
 }
 
-section.jumbo {
+section.jumb {
  background: #d1f0f6;
  display: flex;
  flex-direction: column;
@@ -181,14 +155,15 @@ section.jumbo {
   outline: none;
 }
 
-.jumbo h2 {
+.jumb h2 {
+ font-family: Open Sans;
+ font-style: normal;
+ font-weight: 600;
+ font-size: 30px;
+ line-height: 54px;
  text-align: center;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  font-size: 40px;
-  color: #084482;
-  padding-left: 4px;
-  padding-right: 4px;
+ color: #084482;
+ padding-top: 50px;
 }
 
 .para {
@@ -220,7 +195,7 @@ a.button-primary{
   border: none;
   transition: 0.4s ease-out;
   margin-top: 0.5rem;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 a.button-primary:hover{
@@ -272,11 +247,6 @@ h4 {
   }
 }
 
-@media (max-width: 600px) {
- .jumbo h2 {
-   font-size: 38px;
- }
-}
 
 /*  .land {
         bottom: 6rem;
@@ -368,4 +338,19 @@ h4 {
 
 .description {
   color: white;
+}
+
+
+.navigation {
+  padding-left: 40px !important;
+  padding-right: 40px !important;
+  background: #d1f0f6;
+ }
+
+@media (max-width: 759px) {
+
+ .navigation {
+   padding-left: 15px !important;
+   padding-right: 15px !important;
+ }
 }
