--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
-body 
+body
 {
     font-family: "Open Sans", segoe UI, sans-serif;
     padding: 0;
@@ -21,13 +21,14 @@ main
 }
 h1
 {
-	font-size: 35px;
+	font-size: 25px;
+}
 }
 .center-text
 {
 	text-align: center;
 }
-#mobile-bars 
+#mobile-bars
 {
     position: absolute;
     left: -35vw;
@@ -39,8 +40,88 @@ h1
     cursor: pointer;
     display: none;
 }
+/*Table Styles */
 
-.stix 
+.prime-table {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+.prime-table td, .prime-table th {
+	padding: 12px 15px;
+	border: 1px solid #ddd;
+	text-align: center;
+	font-size: 16px;
+}
+
+.prime-table th {
+	background-color:  rgb(22, 203, 239);
+	color: #fff;
+}
+
+.prime-table tbody tr:nth-child(even) {
+	background-color: #f5f5f5;
+	border: none;
+}
+/*
+.prime-table tbody tr:nth-child(even) td {
+	border: none;
+}
+
+*/
+
+
+/* Table Made Responsive */ 
+
+
+@media screen and (min-width: 315px) and (max-width: 850px) {
+	.prime-table thead {
+		display: none;
+	}
+
+	.prime-table, 
+	.prime-table tbody, 
+	.prime-table tr, 
+	.prime-table td {
+		display: block;
+		width: 100%;
+	} 
+	 data-label=""
+
+	.prime-table tr {
+		margin-bottom: 15px;
+	}
+
+	.prime-table td {
+		text-align: right;
+		padding-left: 50%;
+		text-align: right;
+	}
+
+	.prime-table td::before {
+		content: attr(data-label);
+		position: absolute;
+		left: 15px;
+		text-align: left;
+		width: 50%;
+	}
+
+	.prime-table td:nth-last-child(1) {
+		display: inline-block; 
+	}
+}
+
+@media screen and (min-width: 480px) {
+	.prime-table td {
+		right: 20px;
+	}
+}
+
+
+
+
+
+.stix
 {
     border-radius: 3px;
     height: 3px;
@@ -50,7 +131,28 @@ h1
     transition: 0.4s ease;
 }
 
-#mobile-bars-check 
+/* Edit to Navbar */
+.badger {
+	width: 100%;
+	padding: 10px;
+	background-color: #00aeff;
+	border: none;
+	letter-spacing: 3px;
+	
+	color: #fff;
+	border-radius: none;
+	margin-bottom: 5em;
+	position: absolute;
+	text-align: center;
+	top: 0;
+}
+
+.nav {
+	background-color: #23282d;
+	color: #fff;
+}
+
+#mobile-bars-check
 {
     display: none;
 }
@@ -72,11 +174,22 @@ h1
 	display: block;
 	transition: 0.6s ease-out;
 }
+.searchBox {
+    position: absolute;
+    right: 24%;
+    border-radius: 30px;
+    width: 225px;
+    height: 30px;
+    padding-left: 25px;
+    background-color: #FFFFFF;
+    outline: blue;
+    margin-top: 32px;
+}
 
 #overview-section h1 {
 	background-color: #f3f3f3;
 	margin-top: 1rem;
-	font-size: 30px;
+	font-size: 25px;
 	padding: 5px;
 	padding-left: 7px;
 	border-radius: 5px;
@@ -202,64 +315,71 @@ h1
 	margin: 0 auto;
 	color: crimson;
 }
+
+/* Sidebar begins here */
 #sidebar
 {
-	background: linear-gradient(180deg, #D1F0F6 0%, #00aeff 100%);
+	background-color: #23282d;
+	color: #fff;
 	position: fixed;
 	left: 0;
 	top: 0;
 	z-index: 1;
 	height: 100vh;
 	width: 15vw;
-	padding-top: 2rem;
+	padding-top: 1.5rem;
 }
 #sidebar #upper
 {
 	display: flex;
 	flex-direction: column;
+	margin-top: 50px;
 }
 #sidebar #upper > *
 {
 	font-weight: bolder;
-	align-self: center;	
+	align-self: center;
 }
 #sidebar #upper #admin-badge
 {
 	color: #084482;
 	background-color: transparent;
-	padding: 0.5rem;
-	border: 1px solid #084482;
-	border-radius: 5px;
+	border: none;
+	letter-spacing: 3px;
 	font-weight: bolder;
-	margin-bottom: 2rem;
 }
 
-#sidebar #upper #username 
+#sidebar #upper #username
 {
-	font-size: 18px;
-	color: #333333;
+	font-size: 1.7rem;
+	color: #535353;
 }
 
 #sidebar #hr1 {
-	border: 0.5px solid white;
+	border: 0.25px solid rgb(70, 69, 69);
 	width: 80%;
 }
 
 #sidebar #lower #hr2 {
 	width: 80%;
 	border: 0.5px solid transparent;
-	margin: 1rem;
+	margin: 0.5rem;
+	
 }
 
 #sidebar #lower
 {
 	display: flex;
 	flex-direction: column;
-	margin-top: 3rem;
+	margin-top: 2rem;
 }
 #sidebar #lower > *
 {
-	align-self: center;
+	align-self: flex-start;
+	margin-left: 50px;
+	color: rgb(229, 228, 228);
+	
+
 }
 
 #sidebar #lower select
@@ -283,14 +403,20 @@ h1
 {
 	border-radius: 50%;
 	margin-bottom: 0.5rem;
+	height: 100px;
+	width: 100px;
 }
 #sidebar a
 {
 	text-decoration: none;
 	color: #333333;
-	font-weight: bold;
 	font-size: 16px;
 }
+/* AuGhost Touches */ 
+
+
+
+/*
 
 #table-row {
 	padding-left: 20px;
@@ -301,6 +427,7 @@ h1
 	background-color: #D1F0F6;
 }
 
+*/
 @media (max-width: 860px)
 {
 	main
@@ -314,8 +441,8 @@ h1
 		margin: 0 2rem;
 		width: 90vw;
 	}
-	#overview-section h1, #overview-section h2
-	{
+	#overview-section h1,#overview-section h2 {
+		font-size: 20px;
 		text-align: center;
 	}
 	#overview-section #export
@@ -380,24 +507,31 @@ h1
 	{
 		font-size: 14px;
 	}
-	#mobile-bars 
+
+  #sidebar #lower #hr2 {
+  	width: 80%;
+  	border: 0.5px solid transparent;
+  	margin: 0.35rem;
+  }
+
+	#mobile-bars
 	{
         display: block;
         margin-left: 40vw;
         z-index: 10;
     }
-    #mobile-bars-check:checked ~ #mobile-bars > #stik1 
+    #mobile-bars-check:checked ~ #mobile-bars > #stik1
     {
         transform: rotate(45deg) translateY(7px) translateX(5px);
     }
 
-    #mobile-bars-check:checked ~ #mobile-bars > #stik2 
+    #mobile-bars-check:checked ~ #mobile-bars > #stik2
     {
         width: 0;
         opacity: 0;
     }
 
-    #mobile-bars-check:checked ~ #mobile-bars > #stik3 
+    #mobile-bars-check:checked ~ #mobile-bars > #stik3
     {
         transform: rotate(-45deg) translateY(-8px) translateX(5px);
     }
