--- a/css/intern-experience.css
+++ b/css/intern-experience.css
@@ -81,6 +81,7 @@ hr {
   font-family: sans-serif;
   z-index: 1;
   opacity: 0.2;
+  display: none;
 }
 
 .wrapper-child h4 {
@@ -167,18 +168,24 @@ section.jumb {
 .jumb h2 {
  font-family: Open Sans;
  font-style: normal;
- font-weight: 500;
+ font-weight: 600;
  font-size: 30px;
  line-height: 54px;
  text-align: center;
  color: #084482;
  padding-top: 50px;
+
 }
 
 .para {
- text-align: center;
- margin-bottom: 0px;
- padding: 0 5px;
+  text-align: center;
+  margin-bottom: 0px;
+  padding: 0 5px;
+  color: #474747;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 16px
 }
 
 #img {
@@ -255,7 +262,9 @@ h4 {
     margin-right: 3rem;
   }
 }
-
+.experiencetext {
+  color: #00AEFF;
+}
 
 /*  .land {
         bottom: 6rem;
@@ -365,3 +374,35 @@ h4 {
 }
 
 
+/* MODAL FORM STYLING HERE */
+
+#submitExperience {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  margin: 0 auto;
+  z-index: 2;
+  background-color: transparent;
+  padding-top: 100px;
+  display: none;
+}
+
+.modal-content {
+  border: 3px solid #00AEFF;
+  box-shadow: 3px 3px 5px grey;
+  width: 90%;
+  margin: 0 auto;
+  margin-top: -60px;
+}
+
+.modal-button {
+  background-color: #00AEFF;
+  border-color: #00AEFF;
+}
+
+.modal-button:hover {
+  background-color: #00AEFF;
+  border-color: #00AEFF;
+}
